--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -14,6 +14,7 @@
             <MenuItem mnemonicParsing="false" text="%create"/>
             <Menu mnemonicParsing="false" text="%open">
                 <MenuItem fx:id="menuFileOpenEXP" mnemonicParsing="false" onAction="#onMenuFileOpenEXP" text="EXP"/>
+                <MenuItem fx:id="menuFileOpenMOD" mnemonicParsing="false" onAction="#onMenuFileOpenMOD" text="MOD"/>
             </Menu>
             <MenuItem mnemonicParsing="false" text="%close"/>
         </Menu>
@@ -38,20 +39,20 @@
         <AnchorPane minHeight="300.0">
             <SplitPane dividerPositions="0.68" minHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <AnchorPane minHeight="300.0">
-                    <SplitPane dividerPositions="0.2" minHeight="200.0" orientation="VERTICAL"
-                               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                               AnchorPane.topAnchor="0.0">
-                        <AnchorPane maxHeight="1.7976931348623157E308" minHeight="120.0" prefHeight="120.0"
+                    <SplitPane fx:id="vesSplitPane" dividerPositions="0.30033557046979864" minHeight="200.0"
+                               orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane maxHeight="1.7976931348623157E308" minHeight="0.0" prefHeight="120.0"
                                     SplitPane.resizableWithParent="false">
-                            <TitledPane alignment="BOTTOM_LEFT" collapsible="false" maxHeight="1.7976931348623157E308"
-                                        minHeight="120.0" prefHeight="120.0" text="%inaccuracy"
-                                        AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                            <TitledPane fx:id="inaccuracyPane" alignment="BOTTOM_LEFT" collapsible="false"
+                                        maxHeight="1.7976931348623157E308" minHeight="0.0" prefHeight="120.0"
+                                        text="%inaccuracy" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                         AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <opaqueInsets>
                                     <Insets/>
                                 </opaqueInsets>
                                 <LineChart fx:id="inaccuracyCurve" legendVisible="false"
-                                           maxHeight="1.7976931348623157E308" minHeight="100.0" prefHeight="100.0">
+                                           maxHeight="1.7976931348623157E308" minHeight="0.0" prefHeight="100.0">
                                     <xAxis>
                                         <NumberAxis side="BOTTOM"/>
                                     </xAxis>
@@ -68,15 +69,19 @@
                             </TitledPane>
                         </AnchorPane>
                         <AnchorPane minHeight="100.0">
-                            <TitledPane fx:id="vesPane" collapsible="false" minHeight="100.0" text="%ves" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <LineChart fx:id="vesCurve" alternativeColumnFillVisible="true" cacheShape="false" centerShape="false" legendVisible="false" minHeight="100.0" scaleShape="false">
+                            <TitledPane fx:id="vesPane" collapsible="false" minHeight="0.0" text="%ves"
+                                        AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                        AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <LineChart fx:id="vesCurve" alternativeColumnFillVisible="true" cacheShape="false"
+                                           centerShape="false" legendVisible="false" minHeight="100.0"
+                                           scaleShape="false">
                                     <xAxis>
                                         <NumberAxis label="AB/2" prefHeight="26.0" prefWidth="481.0" side="BOTTOM">
                                             <cursor>
-                                                <Cursor fx:constant="DEFAULT" />
+                                                <Cursor fx:constant="DEFAULT"/>
                                             </cursor>
                                             <opaqueInsets>
-                                                <Insets />
+                                                <Insets/>
                                             </opaqueInsets>
                                         </NumberAxis>
                                     </xAxis>
@@ -99,14 +104,41 @@
                     </SplitPane>
                 </AnchorPane>
                 <AnchorPane minWidth="0.0">
-                    <TitledPane collapsible="false" prefHeight="200.0" prefWidth="200.0" text="%modelTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                        <TableView fx:id="vesTable" prefHeight="200.0" prefWidth="200.0">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="C1" />
-                                <TableColumn prefWidth="75.0" text="C2" />
-                            </columns>
-                        </TableView>
-                    </TitledPane>
+                    <children>
+                        <TabPane tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0"
+                                 AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <tabs>
+                                <Tab text="%modelTable">
+                                    <content>
+                                        <VBox prefHeight="200.0" prefWidth="100.0">
+                                            <children>
+                                                <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                                    <columns>
+                                                        <TableColumn prefWidth="75.0" text="C1"/>
+                                                        <TableColumn prefWidth="75.0" text="C2"/>
+                                                    </columns>
+                                                </TableView>
+                                            </children>
+                                        </VBox>
+                                    </content>
+                                </Tab>
+                                <Tab text="%experimentalTable">
+                                    <content>
+                                        <VBox prefHeight="200.0" prefWidth="100.0">
+                                            <children>
+                                                <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                                    <columns>
+                                                        <TableColumn prefWidth="75.0" text="C1"/>
+                                                        <TableColumn prefWidth="75.0" text="C2"/>
+                                                    </columns>
+                                                </TableView>
+                                            </children>
+                                        </VBox>
+                                    </content>
+                                </Tab>
+                            </tabs>
+                        </TabPane>
+                    </children>
                 </AnchorPane>
             </SplitPane>
         </AnchorPane>
