--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -84,6 +84,9 @@
                                             <opaqueInsets>
                                                 <Insets/>
                                             </opaqueInsets>
+                                            <tickLabelFont>
+                                                <Font size="14.0"/>
+                                            </tickLabelFont>
                                         </NumberAxis>
                                     </xAxis>
                                     <yAxis>
@@ -92,7 +95,7 @@
                                                     tickLabelFill="#070707" tickLength="5.0" tickUnit="10.0"
                                                     upperBound="1000.0">
                                             <tickLabelFont>
-                                                <Font size="9.0"/>
+                                                <Font size="14.0"/>
                                             </tickLabelFont>
                                         </NumberAxis>
                                     </yAxis>
