--- a/src/main/resources/ru/nucodelabs/gem/style.css
+++ b/src/main/resources/ru/nucodelabs/gem/style.css
@@ -13,22 +13,29 @@
 #vesCurve .chart-line-symbol.series0 {
     -fx-background-color: green;
     -fx-background-radius: 50%;
-    -fx-pref-width: 5px;
-    -fx-pref-height: 5px;
+    -fx-border-radius: 50%;
+    -fx-pref-width: 6px;
+    -fx-pref-height: 6px;
 }
 
 #vesCurve .chart-line-symbol.series1 {
     -fx-background-color: red;
+    -fx-background-radius: 100px 100px 0 0;
+    -fx-border-radius: 100px 100px 0 0;
 }
 
 #vesCurve .chart-line-symbol.series2 {
     -fx-background-color: blue;
+    -fx-background-radius: 0 0 100px 100px;
+    -fx-border-radius: 0 0 100px 100px;
 }
 
 #vesCurve .chart-line-symbol {
-    -fx-stroke-width: 0;
+    -fx-border-width: 1px; /* можно сделать 0, чтобы обводки не было */
+    -fx-border-color: black;
+    -fx-border-radius: 0;
     -fx-background-radius: 0;
-    -fx-pref-width: 7px;
-    -fx-pref-height: 2px;
+    -fx-pref-width: 8px;
+    -fx-pref-height: 4px;
 }
 
